--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -9,13 +9,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <title>Hello, world!</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-    <diannemormont-root></diannemormont-root>
+    <app-root></app-root>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
