--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
+
     <title>Hello, world!</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
